--- a/Public/dashboard_main.html
+++ b/Public/dashboard_main.html
@@ -529,48 +529,64 @@ function renderPlayerCard(player, rankIndex){
 }
 
 function showPlayerModal(player){
-  // compute projections using backend values (value_eur) and OVR + age
   const age = player.full_attributes && player.full_attributes.Age ? Number(player.full_attributes.Age) : (player.age || 0);
-  const initialOverall = player.full_attributes && player.full_attributes.Overall ? player.full_attributes.Overall : player.overall || 0;
   const initialValue = player.value_eur || 0;
 
-  const projections = projectPlayer(initialOverall, initialValue, age);
-  const latestProjection = projections.length ? projections[projections.length -1] : { overall: initialOverall, value: initialValue };
-  const negotiation = negotiationRange(latestProjection.value);
+  // Full attribute projections per year
+  const projections = player.projections || [];
+  const latestProjection = projections.length ? projections[projections.length -1] : player.full_attributes || {};
+  const negotiation = player.negotiation || { min: initialValue, max: initialValue };
 
-  // build attributes list
+  // Build full attributes list (current FC26 attributes)
   const attrs = player.full_attributes || {};
   let attributesHtml = `<div class="grid grid-cols-2 gap-2">`;
-  for (const k of Object.keys(attrs)){
+  Object.keys(attrs).forEach(k => {
     attributesHtml += `<div class="text-sm text-gray-300"><strong>${k}:</strong> ${attrs[k] ?? '—'}</div>`;
-  }
+  });
   attributesHtml += `</div>`;
 
-  // projection table
-  let projTable = `<table class="projection-table"><thead><tr><th>Year</th><th>Projected OVR</th><th>Projected Value (GBP)</th></tr></thead><tbody>`;
+  // Build projections table: one row per year with all attributes
+  let projTable = `<table class="projection-table"><thead><tr><th>Year</th>`;
+  // Use keys from first year of projection as headers (fall back to Overall & Value if missing)
+  const projKeys = projections.length ? Object.keys(projections[0]) : ['overall','projected_value_eur'];
+  projKeys.forEach(k => projTable += `<th>${k.replace(/_/g,' ').toUpperCase()}</th>`);
+  projTable += `</tr></thead><tbody>`;
+
   projections.forEach(p => {
-    projTable += `<tr><td>+${p.year}</td><td>${p.overall}</td><td>${fmtGBPFromEur(p.value)}</td></tr>`;
+    projTable += `<tr><td>+${p.year}</td>`;
+    projKeys.forEach(k => {
+      let val = p[k] ?? '—';
+      if (k.includes('value')) val = fmtGBPFromEur(val);
+      projTable += `<td>${val}</td>`;
+    });
+    projTable += `</tr>`;
   });
   projTable += `</tbody></table>`;
 
-  // negotiation guidance
-  const negotiationHtml = `<div class="mt-3 text-sm text-gray-300">Negotiation guidance (based on projection): <div class="mt-1 font-semibold text-green-200">${fmtGBPFromEur(negotiation.min)} — ${fmtGBPFromEur(negotiation.max)}</div></div>`;
+  // Negotiation guidance
+  const negotiationHtml = `<div class="mt-3 text-sm text-gray-300">
+    Negotiation guidance (based on projection): 
+    <div class="mt-1 font-semibold text-green-200">
+      ${fmtGBPFromEur(negotiation.min)} — ${fmtGBPFromEur(negotiation.max)}
+    </div>
+  </div>`;
 
+  // Modal HTML
   modalInner.innerHTML = `
   <div class="space-y-4">
     <div class="flex items-center gap-4">
       <img src="${player.player_face_url || 'https://via.placeholder.com/120'}" class="w-24 h-24 rounded-full border-2 border-green-500">
       <div>
         <h3 class="text-2xl font-bold text-green-300">${player.short_name}</h3>
-        <div class="text-sm text-gray-300">${player.club_position} • Age: ${age} • OVR: ${player.overall}</div>
-        <div class="text-sm text-gray-400 mt-1">Value: ${fmtGBPFromEur(player.value_eur || 0)}</div>
+        <div class="text-sm text-gray-300">${player.club_position} • Age: ${age} • OVR: ${player.full_attributes?.Overall || player.overall}</div>
+        <div class="text-sm text-gray-400 mt-1">Value: ${fmtGBPFromEur(initialValue)}</div>
       </div>
     </div>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
       <div>
         <h4 class="text-sm text-gray-300 mb-2">Projections</h4>
-        <div class="p-3 bg-gray-900 rounded">
+        <div class="p-3 bg-gray-900 rounded max-h-96 overflow-auto">
           ${projTable}
           ${negotiationHtml}
         </div>
@@ -584,10 +600,11 @@ function showPlayerModal(player){
       </div>
     </div>
   </div>
-`;
+  `;
 
   modal.style.display = 'block';
 }
+
 
 /* ------------- Boot ------------- */
 function fullBoot(){
