--- a/Public/dashboard_main.html
+++ b/Public/dashboard_main.html
@@ -500,106 +500,103 @@ findBtn.onclick = async ()=>{
 
 
 /* ------------- Render players ------------- */
-function renderPlayerCard(player, rankIndex){
-  // player fields expected from backend: short_name, club_position, overall, potential, value_eur, player_face_url, min_value_eur, max_value_eur, full_attributes, etc.
+function renderPlayerCard(player, rankIndex) {
   const card = document.createElement('div');
   card.className = 'bg-gray-800 p-4 rounded-xl border border-gray-700 hover:scale-105 transition-transform cursor-pointer';
   if (rankIndex < 5) card.classList.add('top-five');
+
+  // Handle FC26 key differences
+  const name = player.short_name || player.long_name || player.name || "Unknown";
+  const position = player.club_position || player.position || player.play_pos || "—";
+  const overall = player.overall_rating || player.overall || player.ovr || "—";
+  const potential = player.potential_rating || player.potential || "—";
+  const face = player.player_face_url || player.player_image || player.face_url || "https://via.placeholder.com/96";
+  const value = player.market_value_eur || player.value_eur || player.value || 0;
+  const minVal = player.negotiation_min || player.min_value_eur || Math.round(value * 0.8);
+  const maxVal = player.negotiation_max || player.max_value_eur || Math.round(value * 1.2);
+
   card.innerHTML = `
     <div class="flex items-center gap-3">
-      <img src="${player.player_face_url || 'https://via.placeholder.com/96'}" alt="${player.short_name}" class="w-20 h-20 rounded-full border-2 border-green-500 object-cover">
+      <img src="${face}" alt="${name}" class="w-20 h-20 rounded-full border-2 border-green-500 object-cover">
       <div class="flex-1">
         <div class="flex items-center justify-between">
           <div>
-            <div class="text-lg font-semibold text-green-300">${player.short_name}</div>
-            <div class="text-sm text-gray-300">${player.club_position} • OVR ${player.overall} • POT ${player.potential || 'N/A'}</div>
+            <div class="text-lg font-semibold text-green-300">${name}</div>
+            <div class="text-sm text-gray-300">${position} • OVR ${overall} • POT ${potential}</div>
           </div>
           <div class="text-right">
             <div class="text-sm text-gray-300">Value</div>
-            <div class="text-lg font-bold">${fmtGBPFromEur(player.value_eur || 0)}</div>
+            <div class="text-lg font-bold">${fmtGBPFromEur(value)}</div>
           </div>
         </div>
-        <div class="mt-2 text-sm text-gray-400">Negotiation: <span class="font-semibold text-green-200">${fmtGBPFromEur(player.min_value_eur || 0)} - ${fmtGBPFromEur(player.max_value_eur || 0)}</span></div>
-        <div class="mt-2 text-xs text-gray-500">Click for full attributes & projections</div>
+        <div class="mt-2 text-sm text-gray-400">Negotiation: 
+          <span class="font-semibold text-green-200">
+            ${fmtGBPFromEur(minVal)} - ${fmtGBPFromEur(maxVal)}
+          </span>
+        </div>
+        <div class="mt-2 text-xs text-gray-500">Click for full FC26 attributes & projections</div>
       </div>
     </div>
   `;
-  card.addEventListener('click', ()=> showPlayerModal(player));
+
+  card.addEventListener('click', () => showPlayerModal(player));
   return card;
 }
 
-function showPlayerModal(player){
-  const age = player.full_attributes && player.full_attributes.Age ? Number(player.full_attributes.Age) : (player.age || 0);
-  const initialValue = player.value_eur || 0;
+function showPlayerModal(player) {
+  const name = player.short_name || player.long_name || player.name || "Unknown Player";
+  const position = player.club_position || player.position || player.play_pos || "—";
+  const overall = player.overall_rating || player.overall || player.ovr || "—";
+  const potential = player.potential_rating || player.potential || "—";
+  const face = player.player_face_url || player.player_image || player.face_url || "https://via.placeholder.com/120";
+  const value = player.market_value_eur || player.value_eur || player.value || 0;
+  const age = player.age || player.full_attributes?.age || "—";
+  const negotiationMin = player.negotiation_min || Math.round(value * 0.8);
+  const negotiationMax = player.negotiation_max || Math.round(value * 1.2);
 
-  // Full attribute projections per year
-  const projections = player.projections || [];
-  const latestProjection = projections.length ? projections[projections.length -1] : player.full_attributes || {};
-  const negotiation = player.negotiation || { min: initialValue, max: initialValue };
-
-  // Build full attributes list (current FC26 attributes)
+  // FC26 attributes — dynamic rendering
   const attrs = player.full_attributes || {};
   let attributesHtml = `<div class="grid grid-cols-2 gap-2">`;
   Object.keys(attrs).forEach(k => {
-    attributesHtml += `<div class="text-sm text-gray-300"><strong>${k}:</strong> ${attrs[k] ?? '—'}</div>`;
+    attributesHtml += `<div class="text-sm text-gray-300"><strong>${k.replace(/_/g, ' ')}:</strong> ${attrs[k] ?? '—'}</div>`;
   });
   attributesHtml += `</div>`;
 
-  // Build projections table: one row per year with all attributes
-  let projTable = `<table class="projection-table"><thead><tr><th>Year</th>`;
-  // Use keys from first year of projection as headers (fall back to Overall & Value if missing)
-  const projKeys = projections.length ? Object.keys(projections[0]) : ['overall','projected_value_eur'];
-  projKeys.forEach(k => projTable += `<th>${k.replace(/_/g,' ').toUpperCase()}</th>`);
-  projTable += `</tr></thead><tbody>`;
-
-  projections.forEach(p => {
-    projTable += `<tr><td>+${p.year}</td>`;
-    projKeys.forEach(k => {
-      let val = p[k] ?? '—';
-      if (k.includes('value')) val = fmtGBPFromEur(val);
-      projTable += `<td>${val}</td>`;
-    });
-    projTable += `</tr>`;
-  });
-  projTable += `</tbody></table>`;
-
-  // Negotiation guidance
-  const negotiationHtml = `<div class="mt-3 text-sm text-gray-300">
-    Negotiation guidance (based on projection): 
-    <div class="mt-1 font-semibold text-green-200">
-      ${fmtGBPFromEur(negotiation.min)} — ${fmtGBPFromEur(negotiation.max)}
+  // Negotiation section
+  const negotiationHtml = `
+    <div class="mt-3 text-sm text-gray-300">
+      Negotiation Guidance:
+      <div class="mt-1 font-semibold text-green-200">
+        ${fmtGBPFromEur(negotiationMin)} — ${fmtGBPFromEur(negotiationMax)}
+      </div>
     </div>
-  </div>`;
+  `;
 
-  // Modal HTML
   modalInner.innerHTML = `
-  <div class="space-y-4">
-    <div class="flex items-center gap-4">
-      <img src="${player.player_face_url || 'https://via.placeholder.com/120'}" class="w-24 h-24 rounded-full border-2 border-green-500">
-      <div>
-        <h3 class="text-2xl font-bold text-green-300">${player.short_name}</h3>
-        <div class="text-sm text-gray-300">${player.club_position} • Age: ${age} • OVR: ${player.full_attributes?.Overall || player.overall}</div>
-        <div class="text-sm text-gray-400 mt-1">Value: ${fmtGBPFromEur(initialValue)}</div>
-      </div>
-    </div>
-
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-      <div>
-        <h4 class="text-sm text-gray-300 mb-2">Projections</h4>
-        <div class="p-3 bg-gray-900 rounded max-h-96 overflow-auto">
-          ${projTable}
-          ${negotiationHtml}
+    <div class="space-y-4">
+      <div class="flex items-center gap-4">
+        <img src="${face}" class="w-24 h-24 rounded-full border-2 border-green-500">
+        <div>
+          <h3 class="text-2xl font-bold text-green-300">${name}</h3>
+          <div class="text-sm text-gray-300">${position} • Age: ${age} • OVR: ${overall} • POT: ${potential}</div>
+          <div class="text-sm text-gray-400 mt-1">Value: ${fmtGBPFromEur(value)}</div>
         </div>
       </div>
-
-      <div>
-        <h4 class="text-sm text-gray-300 mb-2">Full Attributes</h4>
-        <div class="p-3 bg-gray-900 rounded max-h-96 overflow-auto">
-          ${attributesHtml}
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+        <div>
+          <h4 class="text-sm text-gray-300 mb-2">Negotiation</h4>
+          <div class="p-3 bg-gray-900 rounded">
+            ${negotiationHtml}
+          </div>
+        </div>
+        <div>
+          <h4 class="text-sm text-gray-300 mb-2">FC26 Attributes</h4>
+          <div class="p-3 bg-gray-900 rounded max-h-96 overflow-auto">
+            ${attributesHtml}
+          </div>
         </div>
       </div>
     </div>
-  </div>
   `;
 
   modal.style.display = 'block';
